removed underline from band-members names as on mobile it did not format correctly, also added a line to Moa-metal's bio.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,6 @@ nav i {
 
 .member-heading {
     text-align: center;
-    text-decoration: underline;
     font-size: 28px;
 }
 
